@@ -1,0 +1,5 @@
+title: Simpla
+author: Phu Ly
+version: 1.01
+homepage: http://ifelse.co.uk/simpla
+summary: Simpla is an clean, minimalist theme.
