@@ -1,0 +1,40 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+{% head %}
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>{{ site.title }} {% if article %} {{ article.title }} {% else %} {{ site.subtitle }}  {% endif %}</title>
+  <meta name="generator" content="Mephisto" />
+  {{ 'main' | stylesheet }}
+  {{ head.feed }}
+{% endhead %}
+<body>
+
+  <div id="wrap">
+    <div id="header"><h1><a href="/">{{ site.title }}</a></h1>
+      <p class="description">{{ site.subtitle }}</p>
+    </div>
+    <div id="content">
+      {{ content_for_layout }}
+    </div>
+    <div id="sidebar">
+      <h2>Search</h2>
+      <form method="get" id="sform" action="/search">
+        <label for="q">Search:</label>
+				<input type="text" id="q" value="" name="q" size="15" />
+			</form>
+      {% if site.page_sections  %}
+        <h2>Pages</h2>
+        <ul>
+          {% for page in site.page_sections %}<li>{{ page | link_to_section }}</li>{% endfor %}
+        </ul>
+      {% endif %}
+      <h2>Categories</h2>
+      <ul>
+        {% for category in site.blog_sections %}<li>{{ category | link_to_section  }}</li>{% endfor %}
+      </ul>
+    </div>
+  </div>
+  <div id="footer">{{ site.title }} is proudly using the <a href="http://ifelse.co.uk/simpla">Simpla theme</a> originally designed by <a href="http://ifelse.co.uk">Phu</a>. Powered by <a href="http://wordpress.org/">WordPress</a></div>
+</body>
+</html>
