@@ -1,0 +1,193 @@
+/*  
+Theme Name: Simpla
+Theme URI: http://ifelse.co.uk/simpla/
+Description: A clean, minimalist theme
+Version: 1.01
+Author: Phu Ly
+Author URI: http://ifelse.co.uk/
+*/
+
+/*************************************
+ +Containers
+ *************************************/
+body{
+	background:#fff url(../images/bg.png) repeat-x;
+	border-top:5px solid #333;
+	color:#555;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size:62.5%;
+	line-height:1.5;
+	margin:0;
+	padding:0;
+	text-align:center;
+}
+#wrap{
+	margin:0 auto;
+	text-align:left;
+	width:76em;	
+}
+#content{
+	font-size:1.2em;
+	float:left;
+	padding:1em;
+	width:40em;
+}
+#sidebar{
+	font-size:1.1em;
+	float:right;
+	padding-top:2em;
+	width:20em;
+}
+#header{
+	padding:3em 1em;
+}
+#footer{
+	background:#333;
+	border-top:1px solid #777;
+	color:#888;
+	clear:both;
+	font-size:0.9em;
+	padding:0.5em;
+}
+/*************************************
+ +Hn and p
+ *************************************/
+h1, h2, h3{
+	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-weight:normal;
+	letter-spacing: -1px;
+	margin:0;
+}
+#header h1{
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size:3em;
+	margin:0;
+	margin-right:1em;
+}
+#header h1 a{
+	color:#E87830;
+}
+#header h1 a:hover{
+	color:#CC0000;
+}
+#header p{
+	color:#aaa;
+	font-size:1.1em;
+	margin:0;
+	margin-top:-0.5em;
+}
+.entrytitle h2{
+	font-size:2.2em;
+}
+.entrytitle h2 a
+{
+	color:#B4C24B;
+}
+.entrytitle h2 a:hover{
+	color:#58BBEB;
+}
+.entrytitle h3{
+	font-size:1.8em;
+	color:#6F6F6F;
+}
+#sidebar h3{
+	color:#555;
+	font-size:1.5em;
+	margin:1em 0;
+}
+/*************************************
+ +Entry
+ *************************************/
+.entry{
+	margin-bottom:3em;
+}
+
+.entrymeta{
+	font-size:0.9em;
+}
+.postedby{
+	background:#fff url(../images/user.gif) no-repeat;
+	padding:3px;
+	padding-left:20px;
+}
+.filedto{
+	background:#fff url(../images/post.gif) no-repeat;
+	padding:3px;
+	padding-left:20px;
+}
+.commentslink{
+	background:#fff url(../images/packaged.gif) no-repeat;
+	padding:3px;
+	padding-left:20px;
+}
+
+/*************************************
+ +Sidebar
+ *************************************/
+#sidebar ul{
+	list-style-type:none;
+	margin:0;
+	padding:0;
+}
+#sidebar ul li{
+	border-bottom:1px dotted #ddd;
+	margin-bottom:0.3em;
+	padding:0.3em;
+}
+/*************************************
+ +Comments
+ *************************************/
+.commentsblock{
+	margin:0.5em;
+	padding:1em;
+
+}
+.commentsblock textarea{
+	width:35em;
+}
+.commentsblock input, .commentsblock textarea{
+	border:1px solid #d1d1d1;
+}
+.commentsblock textarea:focus{
+	background:#eee;
+	border:1px solid #a1a1a1;
+}
+.commentsblock textarea:focus, .commentsblock input:focus{
+	background:#eee;
+	border:1px solid #a1a1a1;
+}
+.commentauthor{
+	display:block;
+	font-size:1.5em;
+}
+ol.commentlist{
+	color:#777;
+	font-size:0.9em;
+	list-style-type:none;
+	margin:0;
+	margin-top:1.5em;
+	padding:0;
+}
+.commentlist li{
+	margin-bottom:0.5em;
+	padding:0.5em 1em;
+}
+.alt{
+	background:#f3f5e9;
+	border:1px dotted #d1d1d1;
+	padding:0.5em;
+}
+h3#comments{
+font-size:1.6em;
+}
+
+/*************************************
+ +Misc
+ *************************************/
+a{
+	color:#579;
+	text-decoration:none;
+}
+a:hover{
+	color:#CC0000;
+}
