@@ -1,0 +1,29 @@
+{% if article.comments_count > 0 %}
+	<h3 id="comments">{{ article.comments_count | pluralize: 'Response' }} to &#8220;{{ article.title }}&#8221;</h3> 
+	<ol class="commentlist">
+	{% for comment in article.comments %}
+		<li class="{% cycle 'alt', '' %}" id="comment-{{ comment.id }}">
+			<cite>{{ comment.author_link }}</cite> Says:
+			<br />
+			<small class="commentmetadata"><a href="#comment-{{ comment.id }}" title="">{{ comment.created_at | format_date: 'mdy', true }} at {{ comment.created_at | format_date: 'time_only' }}</a></small>
+			{{ comment.body }}
+		</li>
+  {% endfor %}
+	</ol>
+{% endif %}
+
+
+{% if article.accept_comments %}
+
+<h3 id="respond">Leave a Reply</h3>
+{% commentform %}
+  <p>{{ form.name }}<label for="author"><small>Name (required)</small></label></p>
+  <p>{{ form.email }}<label for="email"><small>Mail (will not be published) <?php if ($req) echo "(required)"; ?></small></label></p>
+  <p>{{ form.url }}<label for="url"><small>Website</small></label></p>
+  <p><textarea name="comment[body]" id="comment" cols="100%" rows="10"></textarea></p>
+  <p><input name="submit" type="submit" id="submit" value="Submit Comment" /></p>
+{% endcommentform %}
+
+{% else %}
+<p>Sorry, comments are closed for this article.</p>
+{% endif %}
