@@ -1,0 +1,5 @@
+{% unless mode == 'page' %}
+  {% include 'shared' %}
+{% else %}
+  {% include 'page' %}
+{% endunless %}
